--- a/index.html
+++ b/index.html
@@ -53,7 +53,16 @@
         [{
           data: get_points(katrina),
           bubbles: {show: true, baseRadius: 0.3}
-        }]
+        }],
+          {
+            grid: {
+              backgroundImage: "img/gulf.png",
+              horizontalLines: false,
+              verticalLines: false
+            },
+            yaxis: {showLabels: false, min: 23.607, max: 33.657},
+            xaxis: {showLabels: false, min: -94.298, max: -77.586}
+          }
       );
     };
     </script>
