--- a/index.html
+++ b/index.html
@@ -50,10 +50,63 @@
       return result;
     };
         Flotr.draw(document.getElementById("chart"),
-        [{
-          data: get_points(katrina),
-          bubbles: {show: true, baseRadius: 0.3}
-        }],
+        [
+          {
+          data: get_points(katrina, function(obs) {
+                    return (obs.wind < 39);
+                }),
+          color: "#74add1",
+          bubbles: {show:true, baseRadius: 0.3, lineWidth: 1},
+      },
+      {
+          data: get_points(katrina, function(obs) {
+                    return (obs.wind >= 39) && (obs.wind < 74);
+                }),
+          color: "#abd9e9",
+          bubbles: {show:true, baseRadius: 0.3, lineWidth: 1},
+      },
+      {
+          data: get_points(katrina, function(obs) {
+                    return (obs.wind >= 74) && (obs.wind < 95);
+                }),
+          color: "#ffffbf",
+          label: "Category 1",
+          bubbles: {show:true, baseRadius: 0.3, lineWidth: 1},
+      },
+      {
+          data: get_points(katrina, function(obs) {
+                    return (obs.wind >= 95) && (obs.wind < 110);
+                }),
+          color: "#fee090",
+          label: "Category 2",
+          bubbles: {show:true, baseRadius: 0.3, lineWidth: 1},
+      },
+      {
+          data: get_points(katrina, function(obs) {
+                    return (obs.wind >= 110) && (obs.wind < 130);
+                }),
+          color: "#fdae61",
+          label: "Category 3",
+          bubbles: {show:true, baseRadius: 0.3, lineWidth: 1},
+      },
+      {
+          data: get_points(katrina, function(obs) {
+                    return (obs.wind >= 130) && (obs.wind < 157);
+                }),
+          color: "#f46d43",
+          label: "Category 4",
+          bubbles: {show:true, baseRadius: 0.3, lineWidth: 1},
+      },
+      {
+          data: get_points(katrina, function(obs) {
+                    return (obs.wind >= 157);
+                }),
+          color: "#d73027",
+          label: "Category 5",
+          bubbles: {show:true, baseRadius: 0.3, lineWidth: 1},
+      },
+
+      ],
           {
             grid: {
               backgroundImage: "img/gulf.png",
